--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.10",
-    "slugify": "^1.4.4"
+    "slugify": "^1.4.4",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
